# playground12

./: playground12.sln
d12app/: d12app.vcxproj  main.cpp
d12app_threaded/: app.cpp  app.h  builder.cpp  builder.h  common.cpp  common.h  d12app_threaded.vcxproj  descheapmgr.cpp  descheapmgr.h  draw.cpp  draw.h  main.cpp  res.cpp  res.h  timestamp.h
d12app_threaded/shaders/: flatcolor_ps.hlsl  flatcolor_vs.hlsl
d3d11appcmake/: CMakeLists.txt  app.h  event.h  frame.cpp  frame.h  keymap.h  main.cpp  render.cpp  render.h
